Bug 280670 - View->Headers->All Headers does not show header names
Summary: View->Headers->All Headers does not show header names
Status: RESOLVED FIXED
Alias: None
Product: kdepim
Classification: Applications
Component: messageviewer (other bugs)
Version First Reported In: 4.7
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-23 22:01 UTC by Wonko
Modified: 2011-08-27 09:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wonko 2011-08-23 22:01:50 UTC
Version:           4.7 (using KDE 4.7.0) 
OS:                Linux

KMail2 does not show the message header names, only what follows after the colon. There's no way to get inormatino like how exactly the 'X-Bugzilla-URL:' header is written. I need this information for my procmail scripts and have to use other mailers to see it now. This was working fine with the old KMail.

Reproducible: Always

Steps to Reproduce:
- select any email
- View -> Headers -> All Headers

Actual Results:  
The To: entry (just an example, the problem is with all headers) shows:
wonko@wonkology.org

Expected Results:  
It should be:
To: wonko@wonkology.org
Comment 1 Laurent Montel 2011-08-24 06:38:20 UTC
Use "view source" and you can see all headers.

Regards
Comment 2 Wonko 2011-08-24 07:59:13 UTC
Wow, why did I not see this option? I even tried the usual (Ctrl+)U shortcut that I know from other mailers or browsers. Thanks!

But it's still  a bug, isn't it? Although a very minor one now.
Comment 3 Torgny Nyblom 2011-08-27 09:48:46 UTC
Git commit 67ddcfd174f5748a7344ca6c4a4db8007a547683 by Torgny Nyblom.
Committed on 27/08/2011 at 11:47.
Pushed by tnyblom into branch 'master'.

Show header names aswell as header value

When showing all headers include the header name.

BUG: 280670

M  +1    -1    messageviewer/headerstyle.cpp

http://commits.kde.org/kdepim/67ddcfd174f5748a7344ca6c4a4db8007a547683
Comment 4 Torgny Nyblom 2011-08-27 09:49:36 UTC
Git commit 50d8f7d046c2dbc1cd5b2f2daa59af553de2996d by Torgny Nyblom.
Committed on 27/08/2011 at 11:47.
Pushed by tnyblom into branch '4.7'.

Show header names aswell as header value

When showing all headers include the header name.

BUG: 280670
(cherry picked from commit 67ddcfd174f5748a7344ca6c4a4db8007a547683)

M  +1    -1    messageviewer/headerstyle.cpp

http://commits.kde.org/kdepim/50d8f7d046c2dbc1cd5b2f2daa59af553de2996d