Show header names aswell as header value

When showing all headers include the header name.

BUG: 280670